# unsupervised-learn-by-ex

./: README.md  pyproject.toml
deepul-master/: .gitignore
deepul-master/deepul/: hw3_helper.py
deepul-master/homeworks/hw1/: cust_help.py  hw1.ipynb  model.py
deepul-master/homeworks/hw2/: hw2.ipynb
deepul-master/homeworks/hw3/: gan_model.py  hw3.ipynb
notebooks/course_2/: inverse_cdf.ipynb  kl_divergence.ipynb
notebooks/hw1_notes/: notes_hw1.ipynb
notebooks/hw2_notes/: vae.ipynb
