[tool.poetry]
name = "deepul-master"
version = "0.1.0"
description = ""
authors = ["Robin Ghyselinck <rghyselinck@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scipy = "^1.14.1"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
torchvision = "^0.20.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
